--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
 * {
     padding: 0;
     margin: 0;
-   
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 h3 {
@@ -20,14 +26,52 @@ header {
     padding: 24px;
 }
 
+.footer {
+    background-color: rgb(45, 147, 241);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 16px;
+    text-align: end;
+    font-size: 12px;
+}
+
 main {
     padding: 32px;
 }
 
-.tabla {
+table {
     margin: 0 auto; 
     width: 50%;
     border: 2px rgba(2, 0, 8, 0.801) solid;
     text-align: center;
     padding: 8px;
 }
+
+.card-container {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-between;
+    margin: 64px 56px;
+}
+
+.card1 {
+    background-color: rgb(12, 186, 12);
+    border-radius: 8px;
+    padding: 24px 42px;
+}
+
+.card2 {
+    background-color: rgb(247, 80, 20);
+    border-radius: 8px;
+    padding: 24px 42px;
+}
+
+.card3 {
+    background-color: rgba(184, 158, 13, 0.74);
+    border-radius: 8px;
+    padding: 24px 42px;
+}
+
