--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
     
 }
 
-a {
+footer a {
     text-decoration: none;
     color: black;
 }
+
 
 h3 {
     text-align: center;
@@ -55,6 +56,9 @@ table {
     text-align: center;
     justify-content: space-between;
     margin: 64px 56px;
+    a {
+        text-decoration: none;
+    }
 }
 
 .card1 {
@@ -75,3 +79,11 @@ table {
     padding: 24px 42px;
 }
 
+.premios {
+    margin: 0 auto; 
+    width: 50%;
+    text-align: center;
+    h5 {
+        margin: 16px;
+    }
+}
