--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,22 @@
     
 }
 
-footer a {
-    text-decoration: none;
+a {
     color: black;
 }
 
+a:hover {
+    color: rgb(203, 121, 13);
+}
+
+footer a {
+    text-decoration: none;
+
+}
+
+.title-ins {
+    font-size: 20px;
+}
 
 h3 {
     text-align: center;
@@ -21,14 +32,19 @@ h2 {
     text-align: center;
 }
 
+.liga {
+    margin-top: 64px;
+    margin-bottom: 16px;
+}
+
 header {
-    background-color: rgb(45, 147, 241);
+    background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 4%, rgba(0, 212, 255, 1) 100%);
     color: white;
     padding: 24px;
 }
 
 .footer {
-    background-color: rgb(45, 147, 241);
+    background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 4%, rgba(0, 212, 255, 1) 100%);
     color: white;
     display: flex;
     flex-direction: column;
@@ -71,18 +87,12 @@ table {
     background-color: rgb(247, 80, 20);
     border-radius: 8px;
     padding: 24px 42px;
-    a {
-        color: black;
-    }
 }
 
 .card3 {
     background-color: rgba(184, 158, 13, 0.74);
     border-radius: 8px;
     padding: 24px 42px;
-    a {
-        color: black;
-    }
 }
 
 .premios {
@@ -92,4 +102,28 @@ table {
     h5 {
         margin: 16px;
     }
+}
+
+.formulario {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 12px 420px;
+   border: solid 1px black;
+}
+
+@media (max-width: 480px) {
+    .card-container {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+.formulario {
+        margin: auto;
+    }
+
+.tabla {
+        font-size: 12px;
+}
 }
