--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,28 @@
 
 a {
     color: black;
+    text-decoration: none;
 }
 
-a:hover {
+a:hover:not(#cart) {
     color: rgb(203, 121, 13);
 }
 
-footer a {
-    text-decoration: none;
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+header nav img {
+    height: 25px;
+}
+
+#cuenta-premios {
+    border-radius: 100%;
+    display: inline-block;
+    width: 20px;
 }
 
 .title-ins {
@@ -110,6 +123,10 @@ table {
     flex-direction: column;
     margin: 12px 420px;
    border: solid 1px black;
+}
+
+#productos-container div img{
+    height: 300px;
 }
 
 @media (max-width: 480px) {
