--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header nav img {
 
 .title-ins {
     font-size: 20px;
+    font-weight: bold;
 }
 
 h3 {
@@ -122,7 +123,7 @@ table {
     display: flex;
     flex-direction: column;
     margin: 12px 420px;
-   border: solid 1px black;
+    border: solid 1px black;
 }
 
 #productos-container div img{
@@ -133,13 +134,14 @@ table {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 16px;
 }
 
 .card-producto {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     text-align: center;
-    background-color: rgba(203, 181, 181, 0.63);
+    background-color: rgba(240, 128, 128, 0.414);
     img {
         padding: 20px 10px;
     }
