--- a/css/style.css
+++ b/css/style.css
@@ -92,19 +92,13 @@ table {
 }
 
 .card1 {
-    background-color: rgb(12, 186, 12);
+    background-color: goldenrod;
     border-radius: 8px;
     padding: 24px 42px;
 }
 
 .card2 {
-    background-color: rgb(247, 80, 20);
-    border-radius: 8px;
-    padding: 24px 42px;
-}
-
-.card3 {
-    background-color: rgba(184, 158, 13, 0.74);
+    background-color: goldenrod;
     border-radius: 8px;
     padding: 24px 42px;
 }
@@ -141,9 +135,14 @@ table {
     width: 350px;
     height: 350px;
     text-align: center;
-    background-color: rgba(240, 128, 128, 0.414);
+    background-color: rgba(77, 170, 170, 0.862);
     img {
-        padding: 20px 10px;
+        padding: 16px 10px;
+    }
+    h3 { 
+        padding: 4px;
+        font-size: 20px;
+        font-weight: bold;
     }
 }
 
